--- a/style.css
+++ b/style.css
@@ -4,7 +4,17 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: darkgrey;
+    background-color: #32373b;
+    margin: 0px;
+}
+#header{
+    height: 70px;
+    width: 100%;
+    background-color: #2c2a2a;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 #image{
     transition: all 0.25s;
@@ -48,15 +58,23 @@ body{
     transform: scale(1.5);
 }
 #home{
-    position: absolute;
-    top: 20px;
-    right: 40px;
     text-decoration: underline;
     cursor: pointer;
+    position: absolute;
+    top: 15px;
+    right: 40px;
+    color: black;
+    transition: all 0.25s;
 }
 #home:hover{
     text-decoration: none;
-    color: rgb(56, 52, 52);
+    color: #ee1515;
+}
+.search{
+    margin-top: 20px;
+    background-color: #222224;
+    padding: 15px;
+    border-radius: 10px;
 }
 #error{
     display: none;
@@ -69,8 +87,8 @@ body{
     padding: 0;
     margin: 2px 0 0 0;
     width: 178px;
-    background: white;
-    border: 1px solid #aaa;
+    background: rgb(150, 140, 140);
+    box-shadow: 4px 4px 4px #757577;
     max-height: 150px;
     overflow-y: auto;
 }
@@ -78,9 +96,6 @@ body{
     padding: 2px 8px;
     cursor: pointer;
     color: rgb(65, 63, 63);
-    border-bottom: 1px solid black;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
     font-size: 14px;
 }
 #suggestions li:hover{
@@ -89,4 +104,38 @@ body{
 .highlight{
     font-weight: bold;
     color: black;
+}
+#heading{
+    opacity: 0.5;
+    -webkit-text-stroke: 0.5px black;
+    color: #f00000;
+    text-shadow: 0 0 3px red;
+}
+#fetch,#shiny{
+    color: #f0f0f0;
+    background-color: #ee1515;
+    border: none;
+    padding: 5px 10px;
+    font-weight: bold;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.25s;
+}
+#shiny{
+    box-shadow: 0 0 10px #ee1515;
+}
+#fetch:hover,#shiny:hover{
+    opacity: 0.7;
+    transform: scale(1.05) translateY(-2px);
+}
+#pkmnName{
+    padding: 3px 0px;
+    border-radius: 5px;
+    color: white;
+    background-color: black;
+    border: 1px solid #6a6a6d;
+    font-size: 16px;
+}
+#pkmnName:focus{
+    outline: none;
 }
